--- a/package.json
+++ b/package.json
@@ -1,26 +1,29 @@
 {
   "name": "task-manager",
   "description": "A Vue.js project",
-  "version": "1.0.0",
+  "version": "0.1.0",
   "author": "Steven Morrison <steven@zaffri.com>",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "start": "node app.js"
   },
   "dependencies": {
-    "vue": "^2.2.1"
+    "vue": "^2.2.5",
+    "vue-router": "^2.3.0",
+    "express": "^4.15.2"
   },
   "devDependencies": {
-    "babel-core": "^6.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-preset-latest": "^6.0.0",
-    "cross-env": "^3.0.0",
-    "css-loader": "^0.25.0",
-    "file-loader": "^0.9.0",
-    "vue-loader": "^11.1.4",
-    "vue-template-compiler": "^2.2.1",
-    "webpack": "^2.2.0",
-    "webpack-dev-server": "^2.2.0"
+    "babel-plugin-transform-runtime": "^6.0.0",
+    "babel-preset-es2015": "^6.0.0",
+    "babel-preset-stage-2": "^6.0.0",
+    "babel-runtime": "^5.8.0",
+    "css-loader": "^0.23.0",
+    "style-loader": "^0.13.0",
+    "webpack": "^2.3.2",
+    "webpack-dev-server": "^2.2.0",
+    "vue-hot-reload-api": "^1.2.0",
+    "vue-html-loader": "^1.0.0",
+    "vue-loader": "^7.3.0",
+    "vue-template-compiler": "^2.2.1"
   }
 }
