--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "express": "^4.15.2",
     "vue": "^2.2.5",
     "vue-router": "^2.3.0",
-    "express": "^4.15.2"
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
