--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "task-manager",
   "description": "A Vue.js project",
   "version": "0.1.0",
-  "author": "Steven Morrison <steven@zaffri.com>",
+  "author": "Steven Morrison",
   "private": true,
   "scripts": {
     "start": "node app.js"
